<resources>
    <string name="app_name">FastFood</string>
    <string name="text_home">Home</string>
    <string name="text_addres">21-42-34, Banjara Hills, Hyder....</string>
    <string name="text_search">Search Food nearby</string>
    <string name="text_under_header">Save Rescued Food for 50%!</string>
    <string name="text_detail_promotion">Left over supplies and food have been used up</string>
    <string name="text_hot_deals">Hot Deals</string>
    <string name="text_new_on_fast_food">New on FastFood</string>
    <string name="text_save_food_save_hunger">Save Food, Save Hunger</string>
    <string name="text_set_your_preferences_now">Set Your Preferences Now!</string>
    <string name="text_cappucino">Cappucino</string>
    <string name="text_suhani_restaurant">Suhani Restaurant</string>
    <string name="text_rp_50000">Rp. 50.000</string>
    <string name="text_looking_for_breakfast">Looking for Breakfast?</string>
    <string name="text_here_s_what_you_might_like_to_taste">Here\'s what you might like to taste</string>
    <string name="text_egg_and_cheese_sandwich">Egg and cheese sandwich</string>
    <string name="text_mehfil_s_place">Mehfil\'s Place</string>
    <string name="text_daily_meals">Daily Meals</string>
    <string name="tezt_middle_eastern">Middle-eastern</string>
    <string name="text_chinese">Chinese</string>
    <string name="text_desi">Desi</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="string_menu">Dimsum</string>
    <string name="default_menu_price">Rp. 25.000</string>
    <string name="menu_description">description</string>
    <string name="string_beli">Beli</string>
    <string name="string_buy">Beli - Rp. %1d</string>
    <string name="string_lokasi">Lokasi</string>
    <string name="string_satu">1</string>
</resources>