<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.fragmentdetail.DetailFragment">


    <ImageView
        android:id="@+id/iv_food_menu"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/dimsum_menu" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:padding="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_food_menu">

        <TextView
            android:id="@+id/tv_menu_name"
            style="@style/TextAppearance.Material3.TitleLarge"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Food Name" />

        <TextView
            android:id="@+id/tv_price_menu"
            style="@style/TextAppearance.Material3.TitleMedium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@id/tv_menu_name"
            app:layout_constraintTop_toBottomOf="@id/tv_menu_name"
            tools:text="Rp. 25.000" />

        <TextView
            android:id="@+id/tv_desc"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="15dp"
            android:text="@string/menu_description"
            app:layout_constraintStart_toStartOf="@+id/tv_price_menu"
            app:layout_constraintTop_toBottomOf="@id/tv_price_menu" />



        <TextView
            android:layout_marginTop="10dp"
            android:id="@+id/tv_location_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="18sp"
            android:text="@string/string_lokasi"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/tv_desc" />

        <TextView
            android:layout_marginTop="8dp"
            android:textAlignment="center"
            android:id="@+id/tv_location"
            android:textStyle="italic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_location_title"
            android:textSize="18sp"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/tv_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="30dp"
            android:layout_marginVertical="8dp"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <LinearLayout
                android:id="@+id/ll_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="9dp">

                <ImageView
                    android:id="@+id/iv_minus"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_minus"/>
                <TextView
                    android:id="@+id/counter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/string_satu"
                    android:textSize="20sp"
                    android:layout_marginHorizontal="8dp"/>
                <ImageView
                    android:id="@+id/iv_add"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_add"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/btn_buy"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="8dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tv_count"
            android:text="@string/string_beli"
            android:layout_marginVertical="13dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>




</androidx.constraintlayout.widget.ConstraintLayout>